# esp-box

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  README_cn.md  check_copyright_config.yaml  launch.toml
components/bsp/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/bsp/boards/: bsp_board_esp32_c3_devkit.h  bsp_board_esp32_s3_cube.h  bsp_board_esp32_wrover_kit.h  bsp_board_esp32s2_hmi_devkit_1.h  bsp_board_esp32s2_kaluga_1.h  bsp_board_esp32s3_hmi_devkit_1.h  bsp_board_esp32s3_lcd_cam.h  esp32_c3_devkit.c  esp32_s2_hmi_devkit.c  esp32_s2_kaluga.c  esp32_s3_box.c  esp32_s3_box.h  esp32_s3_cube.c  esp32_s3_cube.h  esp32_s3_hmi_devkit.c  esp32_s3_lcd_cam.c  esp32_wrover_kit.c  esp_custom_board.c  esp_custom_board.h
components/bsp/include/: bsp_board.h  bsp_btn.h  bsp_camera.h  bsp_codec.h  bsp_i2c.h  bsp_i2s.h  bsp_lcd.h  bsp_storage.h  bsp_tp.h
components/bsp/priv_include/: bsp_board_priv.h
components/bsp/src/: bsp_camera.c  bsp_codec.c  bsp_i2c.c  bsp_i2s.c  bsp_storage.c  bsp_tp.c
components/bsp/src/boards/: bsp_board.c  esp32_bsp_board.c  esp32_bsp_no_sensor.c  esp32_bsp_sensor.c  esp32_s3_box.c  esp32_s3_box.h  esp32_s3_box_lite.c  esp32_s3_box_lite.h
components/bsp/src/indev/: indev.c  indev_mouse.c  indev_mouse.h  indev_tp.c
components/bsp/src/lcd/: bsp_lcd.c  bsp_lcd_i80.c  bsp_lcd_spi.c
components/bsp/src/peripherals/: bsp_btn.c  bsp_codec.c  bsp_i2c.c  bsp_i2s.c  bsp_lcd.c
components/bsp/src/storage/: bsp_sdcard.c  bsp_spiffs.c
components/i2c_devices/: CMakeLists.txt
components/i2c_devices/adc/: adc081.c
components/i2c_devices/icm42670/: Message.c  README.md  icm42670.c  inv_imu_driver.c
components/i2c_devices/icm42670/include/: InvExport.h  Message.h  icm42670.h  inv_imu_cust_config.h  inv_imu_driver.h
components/i2c_devices/icm42670/test/: CMakeLists.txt  icm42670_test.c
components/i2c_devices/include/: adc081.h  bh1750.h  cat5171.h  ft5x06.h  goodix.h  hdc1080.h  icm20602.h  icm20602_reg.h  ltr303.h  mpu6050.h  tca9554.h  tpl0401.h  tt21100.h
components/i2c_devices/io_expander/: tca9554.c
components/i2c_devices/potentiometer/: cat5171.c  tpl0401.c
components/i2c_devices/sensors/: bh1750.c  hdc1080.c  icm20602.c  ltr303.c  mpu6050.c  vl53l0x.c.bak
components/i2c_devices/touch_panel/: ft5x06.c  goodix.c  tt21100.c
components/i2c_devices/touch_panel/include/: ft5x06.h  tt21100.h
components/lvgl/: CMakeLists.txt  Kconfig.projbuild
components/lvgl/include/: lv_demo_conf.h
components/lvgl/lv_lib/lv_lib_qrcode/: README.md  lv_qrcode.c
components/lvgl/lv_port/: lv_port.c  lv_port.h  lv_port_fs.c  lv_port_fs.h
components/lvgl/lv_port/indev/: esp_hid_gap.c  esp_hid_gap.h  indev.c  indev.h  indev_hid.c  indev_hid.h  indev_tp.c  indev_tp.h
components/web_server/: CMakeLists.txt  dns_server.c  web_server.c
components/web_server/front/: generate_204  index.html
components/web_server/include/: dns_server.h  web_server.h
examples/chatgpt_demo/components/chmorgan__esp-audio-player/: .component_hash  CMakeLists.txt  README.md  audio_decode_types.h  audio_log.h  audio_mp3.cpp  audio_mp3.h  audio_player.cpp  audio_wav.cpp  audio_wav.h  idf_component.yml
examples/chatgpt_demo/main/: CMakeLists.txt  Kconfig.projbuild  generateuf2.py  idf_component.yml  main.c  main.h  tts_api.c  tts_api.h
examples/chatgpt_demo/main/app/: app_audio.c  app_audio.h  app_sr.c  app_sr.h  app_ui_ctrl.c  app_ui_ctrl.h  app_ui_events.c  app_wifi.c  app_wifi.h
examples/chatgpt_demo/main/settings/: settings.c  settings.h
examples/chatgpt_demo/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
examples/esp_joystick/joystick_controller/main/: CMakeLists.txt  app_ui_event.c  app_ui_event.h  idf_component.yml  joystick_controller_main.c
examples/esp_joystick/joystick_rc_receiver/main/: CMakeLists.txt  idf_component.yml  joystick_rc_receiver_main.c
examples/factory_demo/components/espressif__esp_lvgl_port/: .component_hash  CMakeLists.txt  README.md  esp_lvgl_port.c  idf_component.yml
examples/factory_demo/components/espressif__esp_rainmaker/: .component_hash  CMakeLists.txt  Kconfig.projbuild  component.mk  idf_component.yml
examples/factory_demo/components/espressif__esp_schedule/: .component_hash  CMakeLists.txt
examples/factory_demo/main/: CMakeLists.txt  app_sr.c  demo_main.c  idf_component.yml  main.c  main.h  settings.c  settings.h  sr_handler.c  ui_main.c
examples/factory_demo/main/app/: app_audio.c  app_data_parse.c  app_fan.h  app_led.c  app_network.c  app_player.c  app_player.h  app_server.c  app_sntp.c  app_sntp.h  app_sr.c  app_sr.h  app_sr_handler.c  app_switch.c  app_switch.h  app_wifi.c  app_wifi.h  file_manager.c  file_manager.h
examples/factory_demo/main/font/: font_cmd_28.c  font_cmd_36.c  font_cmd_en_36.c  font_date_28.c  font_en_20.c  font_en_28.c  font_en_32.c  font_en_64.c  font_en_bold_72.c  font_hint_16.c  font_symbol_20.c  font_temp_36.c
examples/factory_demo/main/gui/: lv_symbol_extra_def.h  ui_about_us.c  ui_about_us.h  ui_boot_animate.c  ui_boot_animate.h  ui_device_ctrl.c  ui_device_ctrl.h  ui_factory_mode.c  ui_factory_mode.h  ui_hint.c  ui_hint.h  ui_main.c  ui_main.h  ui_mute.c  ui_mute.h  ui_net_config.c  ui_net_config.h  ui_player.c  ui_player.h  ui_sensor_monitor.c  ui_sensor_monitor.h  ui_sr.c  ui_sr.h
examples/factory_demo/main/image/: alexa.c  bird.c  boot_logo.c  brightness_off.c  brightness_on.c  esp_box.c  fan_off.c  fan_on.c  light_off.c  light_on.c  logo.c  media_on.c  mic_off.c  mic_on.c  (+6 more)
examples/freetype/main/: CMakeLists.txt  freetype_example.c
examples/lv_demos/main/: CMakeLists.txt  idf_component.yml  lv_demos.c  lv_demos.h
examples/matter_switch/main/: CMakeLists.txt  app_driver.cpp  app_driver.h  app_main.cpp  app_main.h  app_priv.h  box_main.c  box_main.h  idf_component.yml  settings.c  settings.h
examples/usb_headset/main/: CMakeLists.txt  idf_component.yml  main.c  main.h
examples/watering_demo/main/: CMakeLists.txt  idf_component.yml  main.c  main.h
(+703 files in other folders)
